Fix collapsed nav bug and mobile padding issue

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -9,12 +9,16 @@ body {
     padding-top: 57px;
 }
 
-.page-content h2[id]:before {
-    display: block;
-    content: " ";
-    margin-top: -57px;
-    height: calc(1rem + 57px);
-    visibility: hidden;
+.page-content {
+    padding-top: 4rem;
+
+    h2[id]:before {
+        display: block;
+        content: " ";
+        margin-top: -57px;
+        height: calc(1rem + 57px);
+        visibility: hidden;
+    }
 }
 
 .site-navigation {
@@ -75,6 +79,10 @@ ul > li:not(:last-child) {
     padding: .25rem 1rem;
     margin-right: -15px;
     margin-left: -15px;
+
+    &.bg-dark .octicon {
+        fill: theme-color("primary");
+    }
 }
 
 #sidebar-nav {
